--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@sygnal/sse": "^0.1.1",
     "glob": "^10.4.2",
     "gsap": "^3.12.5",
+    "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5"
   }
 }
