--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "glob": "^10.4.2",
     "gsap": "^3.12.5",
     "html2canvas": "^1.4.1",
-    "js-cookie": "^3.0.5"
+    "js-cookie": "^3.0.5",
+    "lottie-web": "^5.12.2",
+    "swiper": "^11.1.9"
   }
 }
