--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
     "compilerOptions": {
+
+        "moduleResolution": "node",
       "target": "ES6",
       "module": "commonjs",
       "declaration": true,
